--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,12 @@ body {
   padding: 5rem 1rem;
   margin: auto;
 }
-
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
 .section__header {
   margin-bottom: 5px;
   font-size: 3rem;
