--- a/css/styles.css
+++ b/css/styles.css
@@ -316,12 +316,13 @@ span {
 
 
 /* Contact Section Styles */
-.contact__container {
+/* .contact__container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   align-items: center;
-}
+} */
+
 
 .contact__image img {
   max-width: 450px;
