--- a/css/gracias_webinar.css
+++ b/css/gracias_webinar.css
@@ -18,6 +18,7 @@ main {
 }
 
 h1{
+    text-align: center;
     font-size: 35px;
     color: #005E6C;
 }
@@ -71,4 +72,44 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+
+
+.image_text{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    margin-bottom: 50px;
+}
+.image_text img{
+
+    transition: all 0.3s ease-in-out;
+    border-radius: 10px;
+}
+.image_text img:hover{
+    
+    transform: scale(1.05);
+}
+
+
+.telegram{
+    color: #0092EC;
+}
+.wsp{
+    color: green;
+}
+.wsp:hover{
+    text-decoration: underline solid green;
+}
+
+
+@media screen and (max-width: 768px) {
+    .image_text{
+        display: flex;
+        flex-direction: column;
+    }
+    .image_text img{
+        margin: 0 auto;
+    }
+    
 }
