--- a/css/styles.css
+++ b/css/styles.css
@@ -299,6 +299,7 @@ span {
 /* proyect */
 
 .section_proy {
+  display: grid;
   padding: 2rem;
   margin-top: 20px;
   background-color: var(--extra-light);
