--- a/css/webinar.css
+++ b/css/webinar.css
@@ -1,114 +1,18 @@
 /* Estilos generales */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&family=Onest:wght@300;400;600&family=Roboto+Slab&family=Roboto:wght@400;700&display=swap');
 
+
+
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
     margin: 0;
     padding: 0;
     background-color: #ffff;
     font-family: "Onest", sans-serif;
+    /* Font Family specified once */
+    line-height: 1.6;
 }
 
-/* BANNER */
-
-
-.banner{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background-color: #f5f5f5;
-    background-size: cover;
-    background-position: center;
-    transition: all 0.1s ease-in-out;
-    background-image: url('../assets/banner_img/b_001.jpg');
-    animation: banner 28s infinite linear;
-}
-
-.banner-content{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-    background-color: rgba(90, 82, 29, 0.7);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.banner-content h1{
-    color: #fff;
-    text-align: center;
-    font-size: 40px;
-    margin: 0;
-    padding: 0;
-    padding-bottom: 20px;
-}
-
-.banner-content h2{
-    color: rgb(255, 255, 255);
-    margin: 0;
-    padding: 0;
-    padding-bottom: 20px;
-}
-
-.banner-content a{
-    text-decoration: none;
-    color: #fff;
-    padding: 9px 20px;
-    border: 1px solid #fff;
-    text-transform: uppercase;
-    transition: all .3s ease-in-out;
-
-
-}
-
-.banner-content a:hover{
-    background-color: #fff;
-    color: #000;
-}
-
-@keyframes banner {
-    0%{
-        background-image: url('../assets/banner_img/b_001.jpg');
-
-    }
-    25%{
-        background-image: url('../assets/banner_img/b_001.jpg');
-
-
-    }
-    26%{
-        background-image: url('../assets/banner_img/b_002.jpg');
-
-    }
-    50%{
-        background-image: url('../assets/banner_img/b_002.jpg');
-
-    }
-    51%{
-        background-image: url('../assets/banner_img/b_003.jpg');
-
-    }
-    75%{
-        background-image: url('../assets/banner_img/b_003.jpg');
-
-    }
-    76%{
-        background-image: url('../assets/banner_img/b_004.jpg');
-
-    }
-    100%{
-        background-image: url('../assets/banner_img/b_004.jpg');
-
-    }
-    
-}
-
-
-/* --------------------- */
 
 main {
     max-width: 1000px;
@@ -116,155 +20,210 @@ main {
     padding: 20px;
 }
 
-h1 {
-    text-transform: uppercase;
-    font-size: 35px;
-    color: #005E6C;
-}
-
-h2 {
-    padding-top: 30px;
-    padding-bottom: 20px;
-    text-align: center;
-    font-size: 25px;
-
-}
-
-/* h3 {
-    color: #333;
-
-} */
-
 strong {
     margin: 5px;
     padding: 2px;
     border-radius: 10px;
-    background-color: rgba(34, 85, 52, 0.926);
-    color: white;
-
+    background-color: #32ADB9;
+    color: black;
 }
 
-img {
+/* Encabezado */
+header {
+    /* text-align: center; */
+    margin-bottom: 20px;
+}
+
+/* BANNER */
+
+.banner {
+    position: relative;
     width: 100%;
+    height: 100vh;
+    background-color: #f5f5f5;
+    background-size: cover;
+    background-position: center;
+    transition: all 0.1s ease-in-out;
+    background-image: url('../assets/im001.jpeg');
+    animation: banner 28s infinite linear;
+}
+
+.banner-content {
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background-color: rgba(10, 10, 21, 0.749);
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+}
+
+.banner-content h1 {
+    margin: 0;
+    padding: 0;
+    color: #fff;
+}
+
+.text_content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 100px;
+    padding-top: 100px;
+}
+
+
+.text_content h1 {
+    font-size: 50px;
+    color: #fff;
+}
+
+.text_content h2 {
+    font-size: 27px;
+    color: #fff;
+    margin-bottom: 40px;
+}
+
+.logo {
+    justify-content: start;
+    width: 180px;
     height: auto;
 
 }
 
-p {
-    font-size: 20px;
+.text_01 a {
+    text-decoration: none;
+    background-color: #00AE45;
+    color: #fff;
+    padding: 9px 20px;
+    border-radius: 20px;
+    text-transform: uppercase;
+    transition: all .3s ease-in-out;
 }
 
-/* Encabezado */
+.banner-content a:hover {
+    background-color: #fff;
+    color: #000;
+}
 
-header {
-    text-align: center;
-    margin-bottom: 20px;
+@keyframes banner {
+
+    0%,
+    25% {
+        background-image: url('../assets/im001.jpeg');
+    }
+
+    26%,
+    50% {
+        background-image: url('../assets/im002.jpeg');
+    }
+
+    51%,
+    75% {
+        background-image: url('../assets/im003.jpeg');
+    }
+
+    76%,
+    100% {
+        background-image: url('../assets/banner_img/b_001.jpg');
+    }
 }
 
 
-
-
+/* ============================================ */
 /* Secciones */
-
-
 section {
     margin-bottom: 30px;
 }
-section img{
 
-    width: 100%;
+.section_data {
 
-}
-.section_data{
+    margin-top: 50px;
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
 }
-.section_data img{
-    padding-top: 50px;
-    width: 100%;
 
+.section_data img {
+    border-radius: 10px;
+    width: 100%;
+    width: 100%;
 }
-.section_data h3{
-    text-transform: uppercase;
+
+
+.section_data h3 {
     color: #005E6C;
-    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 45px;
+    margin-bottom: 10px;
+}
+
+.section_data p {
+    font-size: 20px;
     margin-bottom: 10px;
 
 }
 
-@media screen and (max-width: 768px){
-    .section_data{
-        grid-template-columns: 1fr;
-    }
-    .section_data img{
-        display: none;
-    }
-    
-}
 
 
 /* INFORMACION */
-
-.pregunta{
-    background-color: #f4fa87;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    margin-bottom: 20px;
-
-}
-
-.cards_container{
-    display: grid;
-    gap: 20px;
-}
-.card{
-    
-    background-size: cover;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+.pregunta {
+    color: #ffffff;
+    text-transform: uppercase;
     text-align: center;
-    transition: all .3s ease-in-out;
-}
-.card:hover{
-    transform: scale(1.05);
+    background-color: #367C8C;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
-.card h3{
+.cards_container {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+}
 
-    font-size: 28px;
+.video {
+    display: flex;
+    width: 100%;
+
+}
+
+.video video,
+img {
+    width: 100%;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.card h3 {
+    font-size: 35px;
     color: #005E6C;
     margin-bottom: 10px;
-
 }
-.card p{
-    font-size: 18px;
-    margin-bottom: 10px;
-}
-.yellow{
-    background-size: cover;
 
+.card p {
+    font-size: 20px;
 }
 
 
-@media screen and (min-width: 768px){
-    .cards_container{
-        grid-template-columns: repeat(2,1fr);
-    }
-    
-}
 
-/* --------------------- */
+/* ===================================================== */
 /* Formulario de contacto */
-
 .contact__container {
     display: flex;
     align-items: center;
+
 }
 
-.contact__image {
+.contact__image,
+.contact__content {
+
     flex: 0 0 50%;
 }
 
@@ -274,78 +233,175 @@ section img{
 }
 
 .contact__content {
-    flex: 0 0 50%;
+
     padding: 0 20px;
 }
 
-.section__header {
+
+.animate-bg {
+    margin-left: 20px;
+}
+
+.container {
+    text-align: center;
+    padding-top: 50px;
+}
+
+.container h3 {
+    text-transform: uppercase;
+    color: #005E6C;
+    font-size: 40px;
     margin-bottom: 10px;
 }
 
-.section__subheader {
-    color: #888;
-    margin-bottom: 20px;
-}
-
-/* FORM */
-
-.form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
-}
-.container h2{
-    color: #005E6C;
-    margin-bottom: 20px;
-
-}
-.container h3{
-    text-align: center;
-}
-.animate-bg{
-    margin-left: 20px;
-}
-.container{
-    padding-bottom: 50px;
-}
-.animate-bg:before , .animate-bg:after{
+.animate-bg:before,
+.animate-bg:after {
     content: '';
     position: absolute;
     left: -8px;
-    top:-8px;
-    background: linear-gradient(120deg, #009AA9, #00AE45,#005E6C);
+    top: -8px;
+    background: linear-gradient(120deg, #009AA9, #00AE45, #005E6C);
     background-size: 300%;
     width: calc(100% + 16px);
     height: calc(100% + 16px);
     z-index: -1;
     animation: BGgradient 15s ease infinite;
 }
+
 @keyframes BGgradient {
-    0%{
+    0% {
         background-position: 0% 200%;
     }
-    50%{
+
+    50% {
         background-position: 200% 0%;
     }
-    100%{
+
+    100% {
         background-position: 0% 330%;
     }
-    
 }
-.animate-bg:after{
+
+.animate-bg:after {
     filter: brightness(1.4);
-    filter: drop-shadow(16px 16px 20px rgb(248,220,97));
+    filter: drop-shadow(16px 16px 20px rgb(248, 220, 97));
     filter: blur(15px);
 }
 
-/* ------------------------ */
+/* ======================================================== */
+
+/* Footer Styles */
+.footer {
+    background-color: #000;
+}
+
+.footer__container {
+    padding-left: 100px;
+    display: grid;
+    grid-template-columns:  repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.footer__col h4 {
+    margin-bottom: 1.5rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: white
+}
+
+.footer__col p {
+    margin-bottom: 1rem;
+    color: white;
+}
+
+.footer__col a {
+    display: block;
+    margin-bottom: 1rem;
+    color: white;
+    transition: 0.3s;
+}
+
+.footer__col a span {
+    margin-right: 5px;
+}
+
+.footer__col a:hover {
+    color: #00AE45;
+}
+
+.footer__socials {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.footer__socials span {
+    font-size: 1.5rem;
+    color: white;
+    cursor: pointer;
+}
+
+.footer__bar {
+    padding: 1rem;
+    font-size: 0.9rem;
+    color: white;
+    text-align: center;
+}
+a{
+    text-decoration: none;
+}
+
+
+/* Responsiveness */
+@media only screen and (max-width: 768px) {
+    .cards_container {
+        grid-template-columns: 1fr;
+    }
+
+    .text_content {
+        grid-template-columns: 1fr;
+    }
+
+    .text_01 a {
+        width: auto;
+        padding: 9px 20px;
+    }
+
+    .section_data {
+        grid-template-columns: 1fr;
+    }
+
+    .section_data img {
+        display: none;
+    }
+}
 
 @media only screen and (max-width: 600px) {
+
+    .footer__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .footer__container {
+        padding-left: 10px;
+        
+    }
+
+    .text_content {
+        margin: 0;
+        padding: 20px;
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .text_content h1 {
+        font-size: 40px;
+
+    }
 
     #mc_embed_signup {
         width: 100%;
     }
+
 
     .mc-field-group {
         width: 100%;
@@ -356,55 +412,3 @@ section img{
         text-align: center;
     }
 }
-
-textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.btn {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.btn:hover {
-    background-color: #0056b3;
-}
-
-/* Pie de página */
-
-footer {
-    text-align: center;
-    padding: 20px 0;
-    background-color: #333;
-    color: #fff;
-}
-
-
-
-/* CHANCAY */
-video {
-    border-radius: 10px;
-    width: 100%;
-    height: auto;
-
-}
-
-#playPauseButton {
-    background-color: #005E6C;
-    width: 100px;
-    height: 30px;
-    border-radius: 20px;
-    color: white;
-    cursor: pointer;
-    border: none;
-
-}
-
